--- a/RainMaker/css/main.css
+++ b/RainMaker/css/main.css
@@ -48,14 +48,14 @@ body {
 }
 
 .shadow {
-	width: 22em;
-	position: absolute; bottom: -1em; 
+	width: 18em;
+	position: absolute; bottom: -11em; left: 2em;
 	background: #000;
 	z-index: -1;
 	
-	box-shadow: 0 0 25px 8px rgba(0, 0, 0, 0.4);
-	-moz-box-shadow: 0 0 25px 8px rgba(0, 0, 0, 0.4);
-	-webkit-box-shadow: 0 0 25px 8px rgba(0, 0, 0, 0.4);
+	box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.3);
 	
 	border-radius: 50%;
 	-moz-border-radius: 50%;
@@ -66,8 +66,8 @@ body {
 	margin: auto;
 }
 .drop {
-	width: 0.75em;
-	height: 0.75em;
+	width: 0.5em;
+	height: 0.5em;
 
 	background: #105570;
 
@@ -78,12 +78,12 @@ body {
 	border-radius: 100% 0em 100% 100%;
 	-webkit-border-radius: 100% 0em 100% 100%;
 	-moz-border-radius: 100% 0em 100% 100%;
-
+	
 	-ms-transform: rotate(-45deg); /* IE 9 */
     -webkit-transform: rotate(-45deg); /* Chrome, Safari, Opera */
     transform: rotate(-45deg);
 
-    -webkit-animation: fall 1s linear infinite;
+   	-webkit-animation: fall 1s linear infinite;
     -moz-animation: fall 1s linear infinite;
     animation: fall 1s linear infinite;
 }
