--- a/Particle Wave/css/style.css
+++ b/Particle Wave/css/style.css
@@ -24,6 +24,10 @@ body {
 	animation: wave .4s linear;
 }
 
+.clear {
+	clear: both;
+}
+
 @-webkit-keyframes wave {
 	0% { -webkit-transform: translateY(0); background-color: #808687;}
 	50% { -webkit-transform: translateY(-15px); background-color: #f700ff;}
